# serializer version: 1
# name: test_filter_scan[sample1, no config]
  AFMSlicer(
    afmslicer_version='test',
    area_by_layer=None,
    basename=None,
    centroid_by_layer=None,
    config=dict({
      'base_dir': './',
      'cores': 2,
      'file_ext': '.spm',
      'filter': dict({
        'gaussian_mode': 'nearest',
        'gaussian_size': 4.0,
        'remove_scars': dict({
          'max_scar_width': 4,
          'min_scar_length': 16,
          'removal_iterations': 2,
          'run': True,
          'threshold_high': 0.666,
          'threshold_low': 0.25,
        }),
        'row_alignment_quantile': 0.5,
        'run': True,
      }),
      'loading': dict({
        'channel': 'Height',
        'extract': 'raw',
      }),
      'log_level': 'info',
      'output_dir': './output',
      'plotting': dict({
        'cmap': 'viridis',
        'format': 'png',
        'gif_duration': 100,
        'gif_loop': 0,
        'grid': True,
      }),
      'slicing': dict({
        'area': True,
        'area_thresholds': dict({
          'high': 1500,
          'low': 20,
          'medium': 500,
        }),
        'centroid': False,
        'feret_maximum': False,
        'minimum_size': 20000,
        'pore_colors': list([
          'yellow',
          'green',
          'magenta',
          'blue',
        ]),
        'segment_method': 'label',
        'slices': 50,
      }),
    }),
    feret_maximum_by_layer=None,
    fig_area_per_layer=None,
    fig_log_area_per_layer=None,
    fig_log_objects_per_layer=None,
    fig_objects_per_layer=None,
    filename='sample1',
    full_image_plots=None,
    full_mask_tensor=None,
    full_width_half_max=None,
    grain_crops=None,
    image=array([[ -73.311,  -73.128,  -72.941, ..., -176.808, -176.935, -177.027],
         [ -73.03 ,  -72.866,  -72.697, ..., -176.622, -176.746, -176.835],
         [ -72.69 ,  -72.546,  -72.396, ..., -176.427, -176.548, -176.635],
         ...,
         [ -43.748,  -42.171,  -40.265, ...,  -93.739,  -93.725,  -93.689],
         [ -48.213,  -47.281,  -46.136, ...,  -94.495,  -94.427,  -94.342],
         [ -51.082,  -50.572,  -49.928, ...,  -95.135,  -95.018,  -94.887]]),
    image_name='sample1',
    image_original=array([[-174.706, -172.728, -171.172, ..., -234.84 , -234.155, -234.761],
         [-172.834, -173.361, -171.805, ..., -234.418, -234.339, -236.08 ],
         [-174.733, -172.332, -174.258, ..., -236.106, -234.313, -231.227],
         ...,
         [-229.539, -227.64 , -229.223, ..., -298.193, -300.645, -301.067],
         [-228.3  , -228.405, -226.796, ..., -300.329, -299.749, -299.327],
         [-225.082, -227.007, -226.005, ..., -299.511, -297.982, -296.214]]),
    image_statistics=None,
    img_path='tmp',
    layer_max_pores=None,
    layers=array([-312.409,  -96.426,  119.557,  335.539,  551.522]),
    max_height=551.522,
    min_height=-312.409,
    minimum_size=20000,
    pixel_to_nm_scaling=39.062,
    pores_per_layer=None,
    pores_per_layer_mean=None,
    pores_per_layer_std=None,
    segment_method='label',
    sliced_array=None,
    sliced_clean_region_properties=None,
    sliced_mask=None,
    sliced_region_properties=None,
    sliced_segments=None,
    sliced_segments_clean=None,
    slices=5,
    statistics=None,
    topostats_version=None,
  )
# ---
# name: test_filter_scan[sample1, with config]
  AFMSlicer(
    afmslicer_version='test',
    area_by_layer=None,
    basename=None,
    centroid_by_layer=None,
    config=dict({
      'base_dir': './',
      'cores': 2,
      'file_ext': '.spm',
      'filter': dict({
        'gaussian_mode': 'nearest',
        'gaussian_size': 4.0,
        'remove_scars': dict({
          'max_scar_width': 4,
          'min_scar_length': 16,
          'removal_iterations': 2,
          'threshold_high': 0.666,
          'threshold_low': 0.25,
        }),
        'row_alignment_quantile': 0.5,
      }),
      'loading': dict({
        'channel': 'Height',
        'extract': 'raw',
      }),
      'log_level': 'info',
      'output_dir': './output',
      'plotting': dict({
        'cmap': 'viridis',
        'format': 'png',
        'gif_duration': 100,
        'gif_loop': 0,
        'grid': True,
      }),
      'slicing': dict({
        'area': True,
        'area_thresholds': dict({
          'high': 1500,
          'low': 20,
          'medium': 500,
        }),
        'centroid': False,
        'feret_maximum': False,
        'minimum_size': 20000,
        'pore_colors': list([
          'yellow',
          'green',
          'magenta',
          'blue',
        ]),
        'segment_method': 'label',
        'slices': 50,
      }),
    }),
    feret_maximum_by_layer=None,
    fig_area_per_layer=None,
    fig_log_area_per_layer=None,
    fig_log_objects_per_layer=None,
    fig_objects_per_layer=None,
    filename='sample1',
    full_image_plots=None,
    full_mask_tensor=None,
    full_width_half_max=None,
    grain_crops=None,
    image=array([[ -73.311,  -73.128,  -72.941, ..., -176.808, -176.935, -177.027],
         [ -73.03 ,  -72.866,  -72.697, ..., -176.622, -176.746, -176.835],
         [ -72.69 ,  -72.546,  -72.396, ..., -176.427, -176.548, -176.635],
         ...,
         [ -43.748,  -42.171,  -40.265, ...,  -93.739,  -93.725,  -93.689],
         [ -48.213,  -47.281,  -46.136, ...,  -94.495,  -94.427,  -94.342],
         [ -51.082,  -50.572,  -49.928, ...,  -95.135,  -95.018,  -94.887]]),
    image_name='sample1',
    image_original=array([[-174.706, -172.728, -171.172, ..., -234.84 , -234.155, -234.761],
         [-172.834, -173.361, -171.805, ..., -234.418, -234.339, -236.08 ],
         [-174.733, -172.332, -174.258, ..., -236.106, -234.313, -231.227],
         ...,
         [-229.539, -227.64 , -229.223, ..., -298.193, -300.645, -301.067],
         [-228.3  , -228.405, -226.796, ..., -300.329, -299.749, -299.327],
         [-225.082, -227.007, -226.005, ..., -299.511, -297.982, -296.214]]),
    image_statistics=None,
    img_path='tmp',
    layer_max_pores=None,
    layers=array([-312.409,  -96.426,  119.557,  335.539,  551.522]),
    max_height=551.522,
    min_height=-312.409,
    minimum_size=20000,
    pixel_to_nm_scaling=39.062,
    pores_per_layer=None,
    pores_per_layer_mean=None,
    pores_per_layer_std=None,
    segment_method='label',
    sliced_array=None,
    sliced_clean_region_properties=None,
    sliced_mask=None,
    sliced_region_properties=None,
    sliced_segments=None,
    sliced_segments_clean=None,
    slices=5,
    statistics=None,
    topostats_version=None,
  )
# ---
# name: test_filter_scan[sample2, no config]
  AFMSlicer(
    afmslicer_version='test',
    area_by_layer=None,
    basename=None,
    centroid_by_layer=None,
    config=dict({
      'base_dir': './',
      'cores': 2,
      'file_ext': '.spm',
      'filter': dict({
        'gaussian_mode': 'nearest',
        'gaussian_size': 4.0,
        'remove_scars': dict({
          'max_scar_width': 4,
          'min_scar_length': 16,
          'removal_iterations': 2,
          'run': True,
          'threshold_high': 0.666,
          'threshold_low': 0.25,
        }),
        'row_alignment_quantile': 0.5,
        'run': True,
      }),
      'loading': dict({
        'channel': 'Height',
        'extract': 'raw',
      }),
      'log_level': 'info',
      'output_dir': './output',
      'plotting': dict({
        'cmap': 'viridis',
        'format': 'png',
        'gif_duration': 100,
        'gif_loop': 0,
        'grid': True,
      }),
      'slicing': dict({
        'area': True,
        'area_thresholds': dict({
          'high': 1500,
          'low': 20,
          'medium': 500,
        }),
        'centroid': False,
        'feret_maximum': False,
        'minimum_size': 20000,
        'pore_colors': list([
          'yellow',
          'green',
          'magenta',
          'blue',
        ]),
        'segment_method': 'label',
        'slices': 50,
      }),
    }),
    feret_maximum_by_layer=None,
    fig_area_per_layer=None,
    fig_log_area_per_layer=None,
    fig_log_objects_per_layer=None,
    fig_objects_per_layer=None,
    filename='sample2',
    full_image_plots=None,
    full_mask_tensor=None,
    full_width_half_max=None,
    grain_crops=None,
    image=array([[-8.805, -8.741, -8.645, ..., -3.895, -3.608, -3.347],
         [-8.78 , -8.709, -8.609, ..., -4.075, -3.78 , -3.512],
         [-8.732, -8.655, -8.55 , ..., -4.268, -3.962, -3.686],
         ...,
         [-1.227, -0.876, -0.47 , ...,  2.527,  2.565,  2.592],
         [-1.128, -0.79 , -0.402, ...,  2.488,  2.522,  2.543],
         [-1.034, -0.707, -0.333, ...,  2.455,  2.484,  2.5  ]]),
    image_name='sample2',
    image_original=array([[-267.239, -267.996, -268.166, ..., -286.729, -285.753, -285.216],
         [-267.386, -267.849, -267.947, ..., -287.9  , -288.046, -287.826],
         [-267.532, -267.727, -267.922, ..., -288.192, -287.778, -287.29 ],
         ...,
         [-172.964, -172.306, -171.452, ..., -191.966, -191.844, -191.941],
         [-173.111, -172.452, -171.818, ..., -191.575, -191.795, -191.527],
         [-172.623, -171.94 , -171.305, ..., -191.087, -191.307, -191.575]]),
    image_statistics=None,
    img_path='tmp',
    layer_max_pores=None,
    layers=array([-296.851, -260.794, -224.736, -188.679, -152.621]),
    max_height=-152.621,
    min_height=-296.851,
    minimum_size=20000,
    pixel_to_nm_scaling=0.625,
    pores_per_layer=None,
    pores_per_layer_mean=None,
    pores_per_layer_std=None,
    segment_method='label',
    sliced_array=None,
    sliced_clean_region_properties=None,
    sliced_mask=None,
    sliced_region_properties=None,
    sliced_segments=None,
    sliced_segments_clean=None,
    slices=5,
    statistics=None,
    topostats_version=None,
  )
# ---
# name: test_filter_scan[sample2, with config]
  AFMSlicer(
    afmslicer_version='test',
    area_by_layer=None,
    basename=None,
    centroid_by_layer=None,
    config=dict({
      'base_dir': './',
      'cores': 2,
      'file_ext': '.spm',
      'filter': dict({
        'gaussian_mode': 'nearest',
        'gaussian_size': 4.0,
        'remove_scars': dict({
          'max_scar_width': 4,
          'min_scar_length': 16,
          'removal_iterations': 2,
          'threshold_high': 0.666,
          'threshold_low': 0.25,
        }),
        'row_alignment_quantile': 0.5,
      }),
      'loading': dict({
        'channel': 'Height',
        'extract': 'raw',
      }),
      'log_level': 'info',
      'output_dir': './output',
      'plotting': dict({
        'cmap': 'viridis',
        'format': 'png',
        'gif_duration': 100,
        'gif_loop': 0,
        'grid': True,
      }),
      'slicing': dict({
        'area': True,
        'area_thresholds': dict({
          'high': 1500,
          'low': 20,
          'medium': 500,
        }),
        'centroid': False,
        'feret_maximum': False,
        'minimum_size': 20000,
        'pore_colors': list([
          'yellow',
          'green',
          'magenta',
          'blue',
        ]),
        'segment_method': 'label',
        'slices': 50,
      }),
    }),
    feret_maximum_by_layer=None,
    fig_area_per_layer=None,
    fig_log_area_per_layer=None,
    fig_log_objects_per_layer=None,
    fig_objects_per_layer=None,
    filename='sample2',
    full_image_plots=None,
    full_mask_tensor=None,
    full_width_half_max=None,
    grain_crops=None,
    image=array([[-8.805, -8.741, -8.645, ..., -3.895, -3.608, -3.347],
         [-8.78 , -8.709, -8.609, ..., -4.075, -3.78 , -3.512],
         [-8.732, -8.655, -8.55 , ..., -4.268, -3.962, -3.686],
         ...,
         [-1.227, -0.876, -0.47 , ...,  2.527,  2.565,  2.592],
         [-1.128, -0.79 , -0.402, ...,  2.488,  2.522,  2.543],
         [-1.034, -0.707, -0.333, ...,  2.455,  2.484,  2.5  ]]),
    image_name='sample2',
    image_original=array([[-267.239, -267.996, -268.166, ..., -286.729, -285.753, -285.216],
         [-267.386, -267.849, -267.947, ..., -287.9  , -288.046, -287.826],
         [-267.532, -267.727, -267.922, ..., -288.192, -287.778, -287.29 ],
         ...,
         [-172.964, -172.306, -171.452, ..., -191.966, -191.844, -191.941],
         [-173.111, -172.452, -171.818, ..., -191.575, -191.795, -191.527],
         [-172.623, -171.94 , -171.305, ..., -191.087, -191.307, -191.575]]),
    image_statistics=None,
    img_path='tmp',
    layer_max_pores=None,
    layers=array([-296.851, -260.794, -224.736, -188.679, -152.621]),
    max_height=-152.621,
    min_height=-296.851,
    minimum_size=20000,
    pixel_to_nm_scaling=0.625,
    pores_per_layer=None,
    pores_per_layer_mean=None,
    pores_per_layer_std=None,
    segment_method='label',
    sliced_array=None,
    sliced_clean_region_properties=None,
    sliced_mask=None,
    sliced_region_properties=None,
    sliced_segments=None,
    sliced_segments_clean=None,
    slices=5,
    statistics=None,
    topostats_version=None,
  )
# ---
# name: test_process[sample1, no config]
  AFMSlicer(
    afmslicer_version='test',
    area_by_layer=list([
      list([
        400000000.0,
      ]),
      list([
        290672302.246,
        16018676.758,
        65612.793,
        195312.5,
        186157.227,
        1887512.207,
        7629.395,
        22888.184,
      ]),
      list([
        218200.684,
        1962280.273,
        11505126.953,
        1007080.078,
        4148864.746,
        6680297.852,
        5781555.176,
        6321716.309,
        329589.844,
        2261352.539,
        25184631.348,
        1161193.848,
        1060485.84,
        154113.77,
        2072143.555,
        860595.703,
        1843261.719,
        3222656.25,
        1872253.418,
        129699.707,
        9155.273,
      ]),
      list([
        44250.488,
        10681.152,
        152587.891,
        782775.879,
        82397.461,
        720214.844,
        321960.449,
        105285.645,
        718688.965,
        120544.434,
        1675415.039,
        135803.223,
        42724.609,
        201416.016,
        181579.59,
        204467.773,
        12207.031,
        1446533.203,
        262451.172,
        131225.586,
        259399.414,
        59509.277,
        112915.039,
        288391.113,
        833129.883,
        289916.992,
        167846.68,
        102233.887,
        59509.277,
        2958679.199,
        262451.172,
        125122.07,
        456237.793,
        273132.324,
        2171325.684,
        48828.125,
        109863.281,
        157165.527,
        114440.918,
        115966.797,
        51879.883,
        11557006.836,
        33569.336,
        7629.395,
        70190.43,
        730895.996,
        7629.395,
        71716.309,
        704956.055,
        1533508.301,
        140380.859,
        205993.652,
        358581.543,
        79345.703,
        4577.637,
      ]),
      list([
        1525.879,
      ]),
    ]),
    basename=None,
    centroid_by_layer=None,
    config=dict({
      'base_dir': './',
      'cores': 2,
      'file_ext': '.spm',
      'filter': dict({
        'gaussian_mode': 'nearest',
        'gaussian_size': 4.0,
        'remove_scars': dict({
          'max_scar_width': 4,
          'min_scar_length': 16,
          'removal_iterations': 2,
          'run': True,
          'threshold_high': 0.666,
          'threshold_low': 0.25,
        }),
        'row_alignment_quantile': 0.5,
        'run': True,
      }),
      'loading': dict({
        'channel': 'Height',
        'extract': 'raw',
      }),
      'log_level': 'info',
      'output_dir': './output',
      'plotting': dict({
        'cmap': 'viridis',
        'format': 'png',
        'gif_duration': 100,
        'gif_loop': 0,
        'grid': True,
      }),
      'slicing': dict({
        'area': True,
        'area_thresholds': dict({
          'high': 1500,
          'low': 20,
          'medium': 500,
        }),
        'centroid': False,
        'feret_maximum': False,
        'minimum_size': 0,
        'pore_colors': list([
          'yellow',
          'green',
          'magenta',
          'blue',
        ]),
        'segment_method': 'label',
        'slices': 50,
      }),
    }),
    feret_maximum_by_layer=None,
    fig_area_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Area per layer based on FWHM of pores per layer.'}, xlabel='Layer', ylabel='Area (nm^2)'>,
    ),
    fig_log_area_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Area per layer based on FWHM of pores per layer.'}, xlabel='Layer', ylabel='log(Area)'>,
    ),
    fig_log_objects_per_layer=None,
    fig_objects_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Pores per layer'}, xlabel='Layer', ylabel='n'>,
    ),
    filename='sample1',
    full_image_plots=None,
    full_mask_tensor=None,
    full_width_half_max=tuple(
      1,
      3,
    ),
    grain_crops=None,
    image=array([[ -73.311,  -73.128,  -72.941, ..., -176.808, -176.935, -177.027],
         [ -73.03 ,  -72.866,  -72.697, ..., -176.622, -176.746, -176.835],
         [ -72.69 ,  -72.546,  -72.396, ..., -176.427, -176.548, -176.635],
         ...,
         [ -43.748,  -42.171,  -40.265, ...,  -93.739,  -93.725,  -93.689],
         [ -48.213,  -47.281,  -46.136, ...,  -94.495,  -94.427,  -94.342],
         [ -51.082,  -50.572,  -49.928, ...,  -95.135,  -95.018,  -94.887]]),
    image_name='sample1',
    image_original=array([[-174.706, -172.728, -171.172, ..., -234.84 , -234.155, -234.761],
         [-172.834, -173.361, -171.805, ..., -234.418, -234.339, -236.08 ],
         [-174.733, -172.332, -174.258, ..., -236.106, -234.313, -231.227],
         ...,
         [-229.539, -227.64 , -229.223, ..., -298.193, -300.645, -301.067],
         [-228.3  , -228.405, -226.796, ..., -300.329, -299.749, -299.327],
         [-225.082, -227.007, -226.005, ..., -299.511, -297.982, -296.214]]),
    image_statistics=None,
    img_path='tmp',
    layer_max_pores=None,
    layers=array([-312.409,  -96.426,  119.557,  335.539,  551.522]),
    max_height=641.81,
    min_height=-178.921,
    minimum_size=20000,
    pixel_to_nm_scaling=39.062,
    pores_per_layer=list([
      1,
      8,
      21,
      55,
      1,
    ]),
    pores_per_layer_mean=None,
    pores_per_layer_std=None,
    segment_method='label',
    sliced_array=array([[[ -73.311,  -73.311,  -73.311,  -73.311,  -73.311],
          [ -73.128,  -73.128,  -73.128,  -73.128,  -73.128],
          [ -72.941,  -72.941,  -72.941,  -72.941,  -72.941],
          ...,
          [-176.808, -176.808, -176.808, -176.808, -176.808],
          [-176.935, -176.935, -176.935, -176.935, -176.935],
          [-177.027, -177.027, -177.027, -177.027, -177.027]],
  
         [[ -73.03 ,  -73.03 ,  -73.03 ,  -73.03 ,  -73.03 ],
          [ -72.866,  -72.866,  -72.866,  -72.866,  -72.866],
          [ -72.697,  -72.697,  -72.697,  -72.697,  -72.697],
          ...,
          [-176.622, -176.622, -176.622, -176.622, -176.622],
          [-176.746, -176.746, -176.746, -176.746, -176.746],
          [-176.835, -176.835, -176.835, -176.835, -176.835]],
  
         [[ -72.69 ,  -72.69 ,  -72.69 ,  -72.69 ,  -72.69 ],
          [ -72.546,  -72.546,  -72.546,  -72.546,  -72.546],
          [ -72.396,  -72.396,  -72.396,  -72.396,  -72.396],
          ...,
          [-176.427, -176.427, -176.427, -176.427, -176.427],
          [-176.548, -176.548, -176.548, -176.548, -176.548],
          [-176.635, -176.635, -176.635, -176.635, -176.635]],
  
         ...,
  
         [[ -43.748,  -43.748,  -43.748,  -43.748,  -43.748],
          [ -42.171,  -42.171,  -42.171,  -42.171,  -42.171],
          [ -40.265,  -40.265,  -40.265,  -40.265,  -40.265],
          ...,
          [ -93.739,  -93.739,  -93.739,  -93.739,  -93.739],
          [ -93.725,  -93.725,  -93.725,  -93.725,  -93.725],
          [ -93.689,  -93.689,  -93.689,  -93.689,  -93.689]],
  
         [[ -48.213,  -48.213,  -48.213,  -48.213,  -48.213],
          [ -47.281,  -47.281,  -47.281,  -47.281,  -47.281],
          [ -46.136,  -46.136,  -46.136,  -46.136,  -46.136],
          ...,
          [ -94.495,  -94.495,  -94.495,  -94.495,  -94.495],
          [ -94.427,  -94.427,  -94.427,  -94.427,  -94.427],
          [ -94.342,  -94.342,  -94.342,  -94.342,  -94.342]],
  
         [[ -51.082,  -51.082,  -51.082,  -51.082,  -51.082],
          [ -50.572,  -50.572,  -50.572,  -50.572,  -50.572],
          [ -49.928,  -49.928,  -49.928,  -49.928,  -49.928],
          ...,
          [ -95.135,  -95.135,  -95.135,  -95.135,  -95.135],
          [ -95.018,  -95.018,  -95.018,  -95.018,  -95.018],
          [ -94.887,  -94.887,  -94.887,  -94.887,  -94.887]]]),
    sliced_clean_region_properties=list([
      list([
        <RegionProperties: label=1, bbox=(0, 0, 512, 512)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 512, 512)>,
        <RegionProperties: label=2, bbox=(0, 391, 139, 512)>,
        <RegionProperties: label=3, bbox=(18, 328, 25, 336)>,
        <RegionProperties: label=4, bbox=(25, 270, 37, 283)>,
        <RegionProperties: label=5, bbox=(66, 264, 78, 276)>,
        <RegionProperties: label=6, bbox=(151, 459, 196, 497)>,
        <RegionProperties: label=7, bbox=(195, 351, 197, 354)>,
        <RegionProperties: label=8, bbox=(446, 481, 451, 485)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 69, 9, 90)>,
        <RegionProperties: label=2, bbox=(0, 176, 50, 221)>,
        <RegionProperties: label=3, bbox=(0, 397, 133, 512)>,
        <RegionProperties: label=4, bbox=(48, 93, 87, 120)>,
        <RegionProperties: label=5, bbox=(60, 0, 132, 66)>,
        <RegionProperties: label=6, bbox=(65, 278, 182, 360)>,
        <RegionProperties: label=7, bbox=(97, 125, 164, 246)>,
        <RegionProperties: label=8, bbox=(139, 28, 255, 107)>,
        <RegionProperties: label=9, bbox=(172, 474, 189, 490)>,
        <RegionProperties: label=10, bbox=(190, 172, 225, 240)>,
        <RegionProperties: label=11, bbox=(217, 263, 400, 484)>,
        <RegionProperties: label=12, bbox=(225, 208, 269, 234)>,
        <RegionProperties: label=13, bbox=(277, 122, 314, 150)>,
        <RegionProperties: label=14, bbox=(361, 0, 381, 7)>,
        <RegionProperties: label=15, bbox=(377, 113, 426, 155)>,
        <RegionProperties: label=16, bbox=(444, 411, 475, 441)>,
        <RegionProperties: label=17, bbox=(460, 0, 512, 39)>,
        <RegionProperties: label=18, bbox=(461, 248, 512, 307)>,
        <RegionProperties: label=19, bbox=(468, 146, 512, 185)>,
        <RegionProperties: label=20, bbox=(506, 419, 512, 437)>,
        <RegionProperties: label=21, bbox=(511, 314, 512, 320)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 74, 4, 84)>,
        <RegionProperties: label=2, bbox=(0, 205, 1, 212)>,
        <RegionProperties: label=3, bbox=(0, 420, 10, 431)>,
        <RegionProperties: label=4, bbox=(1, 184, 45, 205)>,
        <RegionProperties: label=5, bbox=(5, 445, 14, 453)>,
        <RegionProperties: label=6, bbox=(16, 427, 52, 444)>,
        <RegionProperties: label=7, bbox=(25, 448, 42, 464)>,
        <RegionProperties: label=8, bbox=(40, 411, 50, 420)>,
        <RegionProperties: label=9, bbox=(51, 446, 89, 468)>,
        <RegionProperties: label=10, bbox=(54, 105, 65, 114)>,
        <RegionProperties: label=11, bbox=(65, 0, 127, 43)>,
        <RegionProperties: label=12, bbox=(70, 434, 81, 444)>,
        <RegionProperties: label=13, bbox=(73, 294, 81, 299)>,
        <RegionProperties: label=14, bbox=(90, 300, 104, 312)>,
        <RegionProperties: label=15, bbox=(93, 438, 106, 449)>,
        <RegionProperties: label=16, bbox=(93, 484, 106, 497)>,
        <RegionProperties: label=17, bbox=(100, 48, 103, 51)>,
        <RegionProperties: label=18, bbox=(103, 130, 142, 176)>,
        <RegionProperties: label=19, bbox=(104, 283, 120, 297)>,
        <RegionProperties: label=20, bbox=(107, 422, 117, 433)>,
        <RegionProperties: label=21, bbox=(113, 304, 130, 318)>,
        <RegionProperties: label=22, bbox=(116, 52, 123, 59)>,
        <RegionProperties: label=23, bbox=(118, 403, 128, 413)>,
        <RegionProperties: label=24, bbox=(128, 323, 143, 338)>,
        <RegionProperties: label=25, bbox=(133, 300, 176, 323)>,
        <RegionProperties: label=26, bbox=(135, 223, 149, 240)>,
        <RegionProperties: label=27, bbox=(138, 201, 149, 213)>,
        <RegionProperties: label=28, bbox=(140, 181, 149, 190)>,
        <RegionProperties: label=29, bbox=(141, 345, 148, 352)>,
        <RegionProperties: label=30, bbox=(144, 48, 237, 99)>,
        <RegionProperties: label=31, bbox=(144, 159, 159, 173)>,
        <RegionProperties: label=32, bbox=(153, 326, 162, 337)>,
        <RegionProperties: label=33, bbox=(194, 214, 214, 234)>,
        <RegionProperties: label=34, bbox=(204, 177, 220, 191)>,
        <RegionProperties: label=35, bbox=(223, 371, 273, 427)>,
        <RegionProperties: label=36, bbox=(224, 35, 230, 41)>,
        <RegionProperties: label=37, bbox=(234, 214, 246, 222)>,
        <RegionProperties: label=38, bbox=(237, 41, 249, 51)>,
        <RegionProperties: label=39, bbox=(252, 218, 263, 227)>,
        <RegionProperties: label=40, bbox=(268, 417, 280, 426)>,
        <RegionProperties: label=41, bbox=(278, 433, 285, 439)>,
        <RegionProperties: label=42, bbox=(280, 268, 396, 477)>,
        <RegionProperties: label=43, bbox=(285, 137, 291, 142)>,
        <RegionProperties: label=44, bbox=(303, 131, 306, 133)>,
        <RegionProperties: label=45, bbox=(305, 332, 313, 339)>,
        <RegionProperties: label=46, bbox=(383, 119, 420, 149)>,
        <RegionProperties: label=47, bbox=(451, 418, 454, 420)>,
        <RegionProperties: label=48, bbox=(462, 426, 469, 434)>,
        <RegionProperties: label=49, bbox=(465, 0, 500, 20)>,
        <RegionProperties: label=50, bbox=(466, 254, 512, 300)>,
        <RegionProperties: label=51, bbox=(474, 152, 485, 163)>,
        <RegionProperties: label=52, bbox=(475, 286, 488, 301)>,
        <RegionProperties: label=53, bbox=(488, 154, 512, 170)>,
        <RegionProperties: label=54, bbox=(498, 23, 506, 32)>,
        <RegionProperties: label=55, bbox=(511, 426, 512, 429)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(315, 398, 316, 399)>,
      ]),
    ]),
    sliced_mask=array([[[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         ...,
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]]]),
    sliced_region_properties=list([
      list([
        <RegionProperties: label=1, bbox=(0, 0, 512, 512)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 512, 512)>,
        <RegionProperties: label=2, bbox=(0, 391, 139, 512)>,
        <RegionProperties: label=3, bbox=(18, 328, 25, 336)>,
        <RegionProperties: label=4, bbox=(25, 270, 37, 283)>,
        <RegionProperties: label=5, bbox=(66, 264, 78, 276)>,
        <RegionProperties: label=6, bbox=(151, 459, 196, 497)>,
        <RegionProperties: label=7, bbox=(195, 351, 197, 354)>,
        <RegionProperties: label=8, bbox=(446, 481, 451, 485)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 69, 9, 90)>,
        <RegionProperties: label=2, bbox=(0, 176, 50, 221)>,
        <RegionProperties: label=3, bbox=(0, 397, 133, 512)>,
        <RegionProperties: label=4, bbox=(48, 93, 87, 120)>,
        <RegionProperties: label=5, bbox=(60, 0, 132, 66)>,
        <RegionProperties: label=6, bbox=(65, 278, 182, 360)>,
        <RegionProperties: label=7, bbox=(97, 125, 164, 246)>,
        <RegionProperties: label=8, bbox=(139, 28, 255, 107)>,
        <RegionProperties: label=9, bbox=(172, 474, 189, 490)>,
        <RegionProperties: label=10, bbox=(190, 172, 225, 240)>,
        <RegionProperties: label=11, bbox=(217, 263, 400, 484)>,
        <RegionProperties: label=12, bbox=(225, 208, 269, 234)>,
        <RegionProperties: label=13, bbox=(277, 122, 314, 150)>,
        <RegionProperties: label=14, bbox=(361, 0, 381, 7)>,
        <RegionProperties: label=15, bbox=(377, 113, 426, 155)>,
        <RegionProperties: label=16, bbox=(444, 411, 475, 441)>,
        <RegionProperties: label=17, bbox=(460, 0, 512, 39)>,
        <RegionProperties: label=18, bbox=(461, 248, 512, 307)>,
        <RegionProperties: label=19, bbox=(468, 146, 512, 185)>,
        <RegionProperties: label=20, bbox=(506, 419, 512, 437)>,
        <RegionProperties: label=21, bbox=(511, 314, 512, 320)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 74, 4, 84)>,
        <RegionProperties: label=2, bbox=(0, 205, 1, 212)>,
        <RegionProperties: label=3, bbox=(0, 420, 10, 431)>,
        <RegionProperties: label=4, bbox=(1, 184, 45, 205)>,
        <RegionProperties: label=5, bbox=(5, 445, 14, 453)>,
        <RegionProperties: label=6, bbox=(16, 427, 52, 444)>,
        <RegionProperties: label=7, bbox=(25, 448, 42, 464)>,
        <RegionProperties: label=8, bbox=(40, 411, 50, 420)>,
        <RegionProperties: label=9, bbox=(51, 446, 89, 468)>,
        <RegionProperties: label=10, bbox=(54, 105, 65, 114)>,
        <RegionProperties: label=11, bbox=(65, 0, 127, 43)>,
        <RegionProperties: label=12, bbox=(70, 434, 81, 444)>,
        <RegionProperties: label=13, bbox=(73, 294, 81, 299)>,
        <RegionProperties: label=14, bbox=(90, 300, 104, 312)>,
        <RegionProperties: label=15, bbox=(93, 438, 106, 449)>,
        <RegionProperties: label=16, bbox=(93, 484, 106, 497)>,
        <RegionProperties: label=17, bbox=(100, 48, 103, 51)>,
        <RegionProperties: label=18, bbox=(103, 130, 142, 176)>,
        <RegionProperties: label=19, bbox=(104, 283, 120, 297)>,
        <RegionProperties: label=20, bbox=(107, 422, 117, 433)>,
        <RegionProperties: label=21, bbox=(113, 304, 130, 318)>,
        <RegionProperties: label=22, bbox=(116, 52, 123, 59)>,
        <RegionProperties: label=23, bbox=(118, 403, 128, 413)>,
        <RegionProperties: label=24, bbox=(128, 323, 143, 338)>,
        <RegionProperties: label=25, bbox=(133, 300, 176, 323)>,
        <RegionProperties: label=26, bbox=(135, 223, 149, 240)>,
        <RegionProperties: label=27, bbox=(138, 201, 149, 213)>,
        <RegionProperties: label=28, bbox=(140, 181, 149, 190)>,
        <RegionProperties: label=29, bbox=(141, 345, 148, 352)>,
        <RegionProperties: label=30, bbox=(144, 48, 237, 99)>,
        <RegionProperties: label=31, bbox=(144, 159, 159, 173)>,
        <RegionProperties: label=32, bbox=(153, 326, 162, 337)>,
        <RegionProperties: label=33, bbox=(194, 214, 214, 234)>,
        <RegionProperties: label=34, bbox=(204, 177, 220, 191)>,
        <RegionProperties: label=35, bbox=(223, 371, 273, 427)>,
        <RegionProperties: label=36, bbox=(224, 35, 230, 41)>,
        <RegionProperties: label=37, bbox=(234, 214, 246, 222)>,
        <RegionProperties: label=38, bbox=(237, 41, 249, 51)>,
        <RegionProperties: label=39, bbox=(252, 218, 263, 227)>,
        <RegionProperties: label=40, bbox=(268, 417, 280, 426)>,
        <RegionProperties: label=41, bbox=(278, 433, 285, 439)>,
        <RegionProperties: label=42, bbox=(280, 268, 396, 477)>,
        <RegionProperties: label=43, bbox=(285, 137, 291, 142)>,
        <RegionProperties: label=44, bbox=(303, 131, 306, 133)>,
        <RegionProperties: label=45, bbox=(305, 332, 313, 339)>,
        <RegionProperties: label=46, bbox=(383, 119, 420, 149)>,
        <RegionProperties: label=47, bbox=(451, 418, 454, 420)>,
        <RegionProperties: label=48, bbox=(462, 426, 469, 434)>,
        <RegionProperties: label=49, bbox=(465, 0, 500, 20)>,
        <RegionProperties: label=50, bbox=(466, 254, 512, 300)>,
        <RegionProperties: label=51, bbox=(474, 152, 485, 163)>,
        <RegionProperties: label=52, bbox=(475, 286, 488, 301)>,
        <RegionProperties: label=53, bbox=(488, 154, 512, 170)>,
        <RegionProperties: label=54, bbox=(498, 23, 506, 32)>,
        <RegionProperties: label=55, bbox=(511, 426, 512, 429)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(315, 398, 316, 399)>,
      ]),
    ]),
    sliced_segments=array([[[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         ...,
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]]]),
    sliced_segments_clean=array([[[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         ...,
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]]]),
    slices=5,
    statistics=area
  layer pore              
  0     0     4.000000e+08
  1     0     2.906723e+08
        1     1.601868e+07
        2     6.561279e+04
        3     1.953125e+05
  ...                  ...
  3     51    2.059937e+05
        52    3.585815e+05
        53    7.934570e+04
        54    4.577637e+03
  4     0     1.525879e+03
  
  [86 rows x 1 columns],
    topostats_version=None,
  )
# ---
# name: test_process[sample1, with config]
  AFMSlicer(
    afmslicer_version='test',
    area_by_layer=list([
      list([
        400000000.0,
      ]),
      list([
        290672302.246,
        16018676.758,
        65612.793,
        195312.5,
        186157.227,
        1887512.207,
        7629.395,
        22888.184,
      ]),
      list([
        218200.684,
        1962280.273,
        11505126.953,
        1007080.078,
        4148864.746,
        6680297.852,
        5781555.176,
        6321716.309,
        329589.844,
        2261352.539,
        25184631.348,
        1161193.848,
        1060485.84,
        154113.77,
        2072143.555,
        860595.703,
        1843261.719,
        3222656.25,
        1872253.418,
        129699.707,
        9155.273,
      ]),
      list([
        44250.488,
        10681.152,
        152587.891,
        782775.879,
        82397.461,
        720214.844,
        321960.449,
        105285.645,
        718688.965,
        120544.434,
        1675415.039,
        135803.223,
        42724.609,
        201416.016,
        181579.59,
        204467.773,
        12207.031,
        1446533.203,
        262451.172,
        131225.586,
        259399.414,
        59509.277,
        112915.039,
        288391.113,
        833129.883,
        289916.992,
        167846.68,
        102233.887,
        59509.277,
        2958679.199,
        262451.172,
        125122.07,
        456237.793,
        273132.324,
        2171325.684,
        48828.125,
        109863.281,
        157165.527,
        114440.918,
        115966.797,
        51879.883,
        11557006.836,
        33569.336,
        7629.395,
        70190.43,
        730895.996,
        7629.395,
        71716.309,
        704956.055,
        1533508.301,
        140380.859,
        205993.652,
        358581.543,
        79345.703,
        4577.637,
      ]),
      list([
        1525.879,
      ]),
    ]),
    basename=None,
    centroid_by_layer=None,
    config=dict({
      'base_dir': './',
      'cores': 2,
      'file_ext': '.spm',
      'filter': dict({
        'gaussian_mode': 'nearest',
        'gaussian_size': 4.0,
        'remove_scars': dict({
          'max_scar_width': 4,
          'min_scar_length': 16,
          'removal_iterations': 2,
          'threshold_high': 0.666,
          'threshold_low': 0.25,
        }),
        'row_alignment_quantile': 0.5,
      }),
      'loading': dict({
        'channel': 'Height',
        'extract': 'raw',
      }),
      'log_level': 'info',
      'output_dir': './output',
      'plotting': dict({
        'cmap': 'viridis',
        'format': 'png',
        'gif_duration': 100,
        'gif_loop': 0,
        'grid': True,
      }),
      'slicing': dict({
        'area': True,
        'area_thresholds': dict({
          'high': 1500,
          'low': 20,
          'medium': 500,
        }),
        'centroid': False,
        'feret_maximum': False,
        'minimum_size': 0,
        'pore_colors': list([
          'yellow',
          'green',
          'magenta',
          'blue',
        ]),
        'segment_method': 'label',
        'slices': 50,
      }),
    }),
    feret_maximum_by_layer=None,
    fig_area_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Area per layer based on FWHM of pores per layer.'}, xlabel='Layer', ylabel='Area (nm^2)'>,
    ),
    fig_log_area_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Area per layer based on FWHM of pores per layer.'}, xlabel='Layer', ylabel='log(Area)'>,
    ),
    fig_log_objects_per_layer=None,
    fig_objects_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Pores per layer'}, xlabel='Layer', ylabel='n'>,
    ),
    filename='sample1',
    full_image_plots=None,
    full_mask_tensor=None,
    full_width_half_max=tuple(
      1,
      3,
    ),
    grain_crops=None,
    image=array([[ -73.311,  -73.128,  -72.941, ..., -176.808, -176.935, -177.027],
         [ -73.03 ,  -72.866,  -72.697, ..., -176.622, -176.746, -176.835],
         [ -72.69 ,  -72.546,  -72.396, ..., -176.427, -176.548, -176.635],
         ...,
         [ -43.748,  -42.171,  -40.265, ...,  -93.739,  -93.725,  -93.689],
         [ -48.213,  -47.281,  -46.136, ...,  -94.495,  -94.427,  -94.342],
         [ -51.082,  -50.572,  -49.928, ...,  -95.135,  -95.018,  -94.887]]),
    image_name='sample1',
    image_original=array([[-174.706, -172.728, -171.172, ..., -234.84 , -234.155, -234.761],
         [-172.834, -173.361, -171.805, ..., -234.418, -234.339, -236.08 ],
         [-174.733, -172.332, -174.258, ..., -236.106, -234.313, -231.227],
         ...,
         [-229.539, -227.64 , -229.223, ..., -298.193, -300.645, -301.067],
         [-228.3  , -228.405, -226.796, ..., -300.329, -299.749, -299.327],
         [-225.082, -227.007, -226.005, ..., -299.511, -297.982, -296.214]]),
    image_statistics=None,
    img_path='tmp',
    layer_max_pores=None,
    layers=array([-312.409,  -96.426,  119.557,  335.539,  551.522]),
    max_height=641.81,
    min_height=-178.921,
    minimum_size=20000,
    pixel_to_nm_scaling=39.062,
    pores_per_layer=list([
      1,
      8,
      21,
      55,
      1,
    ]),
    pores_per_layer_mean=None,
    pores_per_layer_std=None,
    segment_method='label',
    sliced_array=array([[[ -73.311,  -73.311,  -73.311,  -73.311,  -73.311],
          [ -73.128,  -73.128,  -73.128,  -73.128,  -73.128],
          [ -72.941,  -72.941,  -72.941,  -72.941,  -72.941],
          ...,
          [-176.808, -176.808, -176.808, -176.808, -176.808],
          [-176.935, -176.935, -176.935, -176.935, -176.935],
          [-177.027, -177.027, -177.027, -177.027, -177.027]],
  
         [[ -73.03 ,  -73.03 ,  -73.03 ,  -73.03 ,  -73.03 ],
          [ -72.866,  -72.866,  -72.866,  -72.866,  -72.866],
          [ -72.697,  -72.697,  -72.697,  -72.697,  -72.697],
          ...,
          [-176.622, -176.622, -176.622, -176.622, -176.622],
          [-176.746, -176.746, -176.746, -176.746, -176.746],
          [-176.835, -176.835, -176.835, -176.835, -176.835]],
  
         [[ -72.69 ,  -72.69 ,  -72.69 ,  -72.69 ,  -72.69 ],
          [ -72.546,  -72.546,  -72.546,  -72.546,  -72.546],
          [ -72.396,  -72.396,  -72.396,  -72.396,  -72.396],
          ...,
          [-176.427, -176.427, -176.427, -176.427, -176.427],
          [-176.548, -176.548, -176.548, -176.548, -176.548],
          [-176.635, -176.635, -176.635, -176.635, -176.635]],
  
         ...,
  
         [[ -43.748,  -43.748,  -43.748,  -43.748,  -43.748],
          [ -42.171,  -42.171,  -42.171,  -42.171,  -42.171],
          [ -40.265,  -40.265,  -40.265,  -40.265,  -40.265],
          ...,
          [ -93.739,  -93.739,  -93.739,  -93.739,  -93.739],
          [ -93.725,  -93.725,  -93.725,  -93.725,  -93.725],
          [ -93.689,  -93.689,  -93.689,  -93.689,  -93.689]],
  
         [[ -48.213,  -48.213,  -48.213,  -48.213,  -48.213],
          [ -47.281,  -47.281,  -47.281,  -47.281,  -47.281],
          [ -46.136,  -46.136,  -46.136,  -46.136,  -46.136],
          ...,
          [ -94.495,  -94.495,  -94.495,  -94.495,  -94.495],
          [ -94.427,  -94.427,  -94.427,  -94.427,  -94.427],
          [ -94.342,  -94.342,  -94.342,  -94.342,  -94.342]],
  
         [[ -51.082,  -51.082,  -51.082,  -51.082,  -51.082],
          [ -50.572,  -50.572,  -50.572,  -50.572,  -50.572],
          [ -49.928,  -49.928,  -49.928,  -49.928,  -49.928],
          ...,
          [ -95.135,  -95.135,  -95.135,  -95.135,  -95.135],
          [ -95.018,  -95.018,  -95.018,  -95.018,  -95.018],
          [ -94.887,  -94.887,  -94.887,  -94.887,  -94.887]]]),
    sliced_clean_region_properties=list([
      list([
        <RegionProperties: label=1, bbox=(0, 0, 512, 512)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 512, 512)>,
        <RegionProperties: label=2, bbox=(0, 391, 139, 512)>,
        <RegionProperties: label=3, bbox=(18, 328, 25, 336)>,
        <RegionProperties: label=4, bbox=(25, 270, 37, 283)>,
        <RegionProperties: label=5, bbox=(66, 264, 78, 276)>,
        <RegionProperties: label=6, bbox=(151, 459, 196, 497)>,
        <RegionProperties: label=7, bbox=(195, 351, 197, 354)>,
        <RegionProperties: label=8, bbox=(446, 481, 451, 485)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 69, 9, 90)>,
        <RegionProperties: label=2, bbox=(0, 176, 50, 221)>,
        <RegionProperties: label=3, bbox=(0, 397, 133, 512)>,
        <RegionProperties: label=4, bbox=(48, 93, 87, 120)>,
        <RegionProperties: label=5, bbox=(60, 0, 132, 66)>,
        <RegionProperties: label=6, bbox=(65, 278, 182, 360)>,
        <RegionProperties: label=7, bbox=(97, 125, 164, 246)>,
        <RegionProperties: label=8, bbox=(139, 28, 255, 107)>,
        <RegionProperties: label=9, bbox=(172, 474, 189, 490)>,
        <RegionProperties: label=10, bbox=(190, 172, 225, 240)>,
        <RegionProperties: label=11, bbox=(217, 263, 400, 484)>,
        <RegionProperties: label=12, bbox=(225, 208, 269, 234)>,
        <RegionProperties: label=13, bbox=(277, 122, 314, 150)>,
        <RegionProperties: label=14, bbox=(361, 0, 381, 7)>,
        <RegionProperties: label=15, bbox=(377, 113, 426, 155)>,
        <RegionProperties: label=16, bbox=(444, 411, 475, 441)>,
        <RegionProperties: label=17, bbox=(460, 0, 512, 39)>,
        <RegionProperties: label=18, bbox=(461, 248, 512, 307)>,
        <RegionProperties: label=19, bbox=(468, 146, 512, 185)>,
        <RegionProperties: label=20, bbox=(506, 419, 512, 437)>,
        <RegionProperties: label=21, bbox=(511, 314, 512, 320)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 74, 4, 84)>,
        <RegionProperties: label=2, bbox=(0, 205, 1, 212)>,
        <RegionProperties: label=3, bbox=(0, 420, 10, 431)>,
        <RegionProperties: label=4, bbox=(1, 184, 45, 205)>,
        <RegionProperties: label=5, bbox=(5, 445, 14, 453)>,
        <RegionProperties: label=6, bbox=(16, 427, 52, 444)>,
        <RegionProperties: label=7, bbox=(25, 448, 42, 464)>,
        <RegionProperties: label=8, bbox=(40, 411, 50, 420)>,
        <RegionProperties: label=9, bbox=(51, 446, 89, 468)>,
        <RegionProperties: label=10, bbox=(54, 105, 65, 114)>,
        <RegionProperties: label=11, bbox=(65, 0, 127, 43)>,
        <RegionProperties: label=12, bbox=(70, 434, 81, 444)>,
        <RegionProperties: label=13, bbox=(73, 294, 81, 299)>,
        <RegionProperties: label=14, bbox=(90, 300, 104, 312)>,
        <RegionProperties: label=15, bbox=(93, 438, 106, 449)>,
        <RegionProperties: label=16, bbox=(93, 484, 106, 497)>,
        <RegionProperties: label=17, bbox=(100, 48, 103, 51)>,
        <RegionProperties: label=18, bbox=(103, 130, 142, 176)>,
        <RegionProperties: label=19, bbox=(104, 283, 120, 297)>,
        <RegionProperties: label=20, bbox=(107, 422, 117, 433)>,
        <RegionProperties: label=21, bbox=(113, 304, 130, 318)>,
        <RegionProperties: label=22, bbox=(116, 52, 123, 59)>,
        <RegionProperties: label=23, bbox=(118, 403, 128, 413)>,
        <RegionProperties: label=24, bbox=(128, 323, 143, 338)>,
        <RegionProperties: label=25, bbox=(133, 300, 176, 323)>,
        <RegionProperties: label=26, bbox=(135, 223, 149, 240)>,
        <RegionProperties: label=27, bbox=(138, 201, 149, 213)>,
        <RegionProperties: label=28, bbox=(140, 181, 149, 190)>,
        <RegionProperties: label=29, bbox=(141, 345, 148, 352)>,
        <RegionProperties: label=30, bbox=(144, 48, 237, 99)>,
        <RegionProperties: label=31, bbox=(144, 159, 159, 173)>,
        <RegionProperties: label=32, bbox=(153, 326, 162, 337)>,
        <RegionProperties: label=33, bbox=(194, 214, 214, 234)>,
        <RegionProperties: label=34, bbox=(204, 177, 220, 191)>,
        <RegionProperties: label=35, bbox=(223, 371, 273, 427)>,
        <RegionProperties: label=36, bbox=(224, 35, 230, 41)>,
        <RegionProperties: label=37, bbox=(234, 214, 246, 222)>,
        <RegionProperties: label=38, bbox=(237, 41, 249, 51)>,
        <RegionProperties: label=39, bbox=(252, 218, 263, 227)>,
        <RegionProperties: label=40, bbox=(268, 417, 280, 426)>,
        <RegionProperties: label=41, bbox=(278, 433, 285, 439)>,
        <RegionProperties: label=42, bbox=(280, 268, 396, 477)>,
        <RegionProperties: label=43, bbox=(285, 137, 291, 142)>,
        <RegionProperties: label=44, bbox=(303, 131, 306, 133)>,
        <RegionProperties: label=45, bbox=(305, 332, 313, 339)>,
        <RegionProperties: label=46, bbox=(383, 119, 420, 149)>,
        <RegionProperties: label=47, bbox=(451, 418, 454, 420)>,
        <RegionProperties: label=48, bbox=(462, 426, 469, 434)>,
        <RegionProperties: label=49, bbox=(465, 0, 500, 20)>,
        <RegionProperties: label=50, bbox=(466, 254, 512, 300)>,
        <RegionProperties: label=51, bbox=(474, 152, 485, 163)>,
        <RegionProperties: label=52, bbox=(475, 286, 488, 301)>,
        <RegionProperties: label=53, bbox=(488, 154, 512, 170)>,
        <RegionProperties: label=54, bbox=(498, 23, 506, 32)>,
        <RegionProperties: label=55, bbox=(511, 426, 512, 429)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(315, 398, 316, 399)>,
      ]),
    ]),
    sliced_mask=array([[[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         ...,
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]]]),
    sliced_region_properties=list([
      list([
        <RegionProperties: label=1, bbox=(0, 0, 512, 512)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 512, 512)>,
        <RegionProperties: label=2, bbox=(0, 391, 139, 512)>,
        <RegionProperties: label=3, bbox=(18, 328, 25, 336)>,
        <RegionProperties: label=4, bbox=(25, 270, 37, 283)>,
        <RegionProperties: label=5, bbox=(66, 264, 78, 276)>,
        <RegionProperties: label=6, bbox=(151, 459, 196, 497)>,
        <RegionProperties: label=7, bbox=(195, 351, 197, 354)>,
        <RegionProperties: label=8, bbox=(446, 481, 451, 485)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 69, 9, 90)>,
        <RegionProperties: label=2, bbox=(0, 176, 50, 221)>,
        <RegionProperties: label=3, bbox=(0, 397, 133, 512)>,
        <RegionProperties: label=4, bbox=(48, 93, 87, 120)>,
        <RegionProperties: label=5, bbox=(60, 0, 132, 66)>,
        <RegionProperties: label=6, bbox=(65, 278, 182, 360)>,
        <RegionProperties: label=7, bbox=(97, 125, 164, 246)>,
        <RegionProperties: label=8, bbox=(139, 28, 255, 107)>,
        <RegionProperties: label=9, bbox=(172, 474, 189, 490)>,
        <RegionProperties: label=10, bbox=(190, 172, 225, 240)>,
        <RegionProperties: label=11, bbox=(217, 263, 400, 484)>,
        <RegionProperties: label=12, bbox=(225, 208, 269, 234)>,
        <RegionProperties: label=13, bbox=(277, 122, 314, 150)>,
        <RegionProperties: label=14, bbox=(361, 0, 381, 7)>,
        <RegionProperties: label=15, bbox=(377, 113, 426, 155)>,
        <RegionProperties: label=16, bbox=(444, 411, 475, 441)>,
        <RegionProperties: label=17, bbox=(460, 0, 512, 39)>,
        <RegionProperties: label=18, bbox=(461, 248, 512, 307)>,
        <RegionProperties: label=19, bbox=(468, 146, 512, 185)>,
        <RegionProperties: label=20, bbox=(506, 419, 512, 437)>,
        <RegionProperties: label=21, bbox=(511, 314, 512, 320)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 74, 4, 84)>,
        <RegionProperties: label=2, bbox=(0, 205, 1, 212)>,
        <RegionProperties: label=3, bbox=(0, 420, 10, 431)>,
        <RegionProperties: label=4, bbox=(1, 184, 45, 205)>,
        <RegionProperties: label=5, bbox=(5, 445, 14, 453)>,
        <RegionProperties: label=6, bbox=(16, 427, 52, 444)>,
        <RegionProperties: label=7, bbox=(25, 448, 42, 464)>,
        <RegionProperties: label=8, bbox=(40, 411, 50, 420)>,
        <RegionProperties: label=9, bbox=(51, 446, 89, 468)>,
        <RegionProperties: label=10, bbox=(54, 105, 65, 114)>,
        <RegionProperties: label=11, bbox=(65, 0, 127, 43)>,
        <RegionProperties: label=12, bbox=(70, 434, 81, 444)>,
        <RegionProperties: label=13, bbox=(73, 294, 81, 299)>,
        <RegionProperties: label=14, bbox=(90, 300, 104, 312)>,
        <RegionProperties: label=15, bbox=(93, 438, 106, 449)>,
        <RegionProperties: label=16, bbox=(93, 484, 106, 497)>,
        <RegionProperties: label=17, bbox=(100, 48, 103, 51)>,
        <RegionProperties: label=18, bbox=(103, 130, 142, 176)>,
        <RegionProperties: label=19, bbox=(104, 283, 120, 297)>,
        <RegionProperties: label=20, bbox=(107, 422, 117, 433)>,
        <RegionProperties: label=21, bbox=(113, 304, 130, 318)>,
        <RegionProperties: label=22, bbox=(116, 52, 123, 59)>,
        <RegionProperties: label=23, bbox=(118, 403, 128, 413)>,
        <RegionProperties: label=24, bbox=(128, 323, 143, 338)>,
        <RegionProperties: label=25, bbox=(133, 300, 176, 323)>,
        <RegionProperties: label=26, bbox=(135, 223, 149, 240)>,
        <RegionProperties: label=27, bbox=(138, 201, 149, 213)>,
        <RegionProperties: label=28, bbox=(140, 181, 149, 190)>,
        <RegionProperties: label=29, bbox=(141, 345, 148, 352)>,
        <RegionProperties: label=30, bbox=(144, 48, 237, 99)>,
        <RegionProperties: label=31, bbox=(144, 159, 159, 173)>,
        <RegionProperties: label=32, bbox=(153, 326, 162, 337)>,
        <RegionProperties: label=33, bbox=(194, 214, 214, 234)>,
        <RegionProperties: label=34, bbox=(204, 177, 220, 191)>,
        <RegionProperties: label=35, bbox=(223, 371, 273, 427)>,
        <RegionProperties: label=36, bbox=(224, 35, 230, 41)>,
        <RegionProperties: label=37, bbox=(234, 214, 246, 222)>,
        <RegionProperties: label=38, bbox=(237, 41, 249, 51)>,
        <RegionProperties: label=39, bbox=(252, 218, 263, 227)>,
        <RegionProperties: label=40, bbox=(268, 417, 280, 426)>,
        <RegionProperties: label=41, bbox=(278, 433, 285, 439)>,
        <RegionProperties: label=42, bbox=(280, 268, 396, 477)>,
        <RegionProperties: label=43, bbox=(285, 137, 291, 142)>,
        <RegionProperties: label=44, bbox=(303, 131, 306, 133)>,
        <RegionProperties: label=45, bbox=(305, 332, 313, 339)>,
        <RegionProperties: label=46, bbox=(383, 119, 420, 149)>,
        <RegionProperties: label=47, bbox=(451, 418, 454, 420)>,
        <RegionProperties: label=48, bbox=(462, 426, 469, 434)>,
        <RegionProperties: label=49, bbox=(465, 0, 500, 20)>,
        <RegionProperties: label=50, bbox=(466, 254, 512, 300)>,
        <RegionProperties: label=51, bbox=(474, 152, 485, 163)>,
        <RegionProperties: label=52, bbox=(475, 286, 488, 301)>,
        <RegionProperties: label=53, bbox=(488, 154, 512, 170)>,
        <RegionProperties: label=54, bbox=(498, 23, 506, 32)>,
        <RegionProperties: label=55, bbox=(511, 426, 512, 429)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(315, 398, 316, 399)>,
      ]),
    ]),
    sliced_segments=array([[[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         ...,
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]]]),
    sliced_segments_clean=array([[[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.],
          [1., 0., 0., 0., 0.]],
  
         ...,
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]],
  
         [[1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          ...,
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.],
          [1., 1., 0., 0., 0.]]]),
    slices=5,
    statistics=area
  layer pore              
  0     0     4.000000e+08
  1     0     2.906723e+08
        1     1.601868e+07
        2     6.561279e+04
        3     1.953125e+05
  ...                  ...
  3     51    2.059937e+05
        52    3.585815e+05
        53    7.934570e+04
        54    4.577637e+03
  4     0     1.525879e+03
  
  [86 rows x 1 columns],
    topostats_version=None,
  )
# ---
# name: test_process[sample2, no config]
  AFMSlicer(
    afmslicer_version='test',
    area_by_layer=list([
      list([
        160000.0,
      ]),
      list([
        160000.0,
      ]),
      list([
        160000.0,
      ]),
      list([
        160000.0,
      ]),
      list([
        0.391,
      ]),
    ]),
    basename=None,
    centroid_by_layer=None,
    config=dict({
      'base_dir': './',
      'cores': 2,
      'file_ext': '.spm',
      'filter': dict({
        'gaussian_mode': 'nearest',
        'gaussian_size': 4.0,
        'remove_scars': dict({
          'max_scar_width': 4,
          'min_scar_length': 16,
          'removal_iterations': 2,
          'run': True,
          'threshold_high': 0.666,
          'threshold_low': 0.25,
        }),
        'row_alignment_quantile': 0.5,
        'run': True,
      }),
      'loading': dict({
        'channel': 'Height',
        'extract': 'raw',
      }),
      'log_level': 'info',
      'output_dir': './output',
      'plotting': dict({
        'cmap': 'viridis',
        'format': 'png',
        'gif_duration': 100,
        'gif_loop': 0,
        'grid': True,
      }),
      'slicing': dict({
        'area': True,
        'area_thresholds': dict({
          'high': 1500,
          'low': 20,
          'medium': 500,
        }),
        'centroid': False,
        'feret_maximum': False,
        'minimum_size': 0,
        'pore_colors': list([
          'yellow',
          'green',
          'magenta',
          'blue',
        ]),
        'segment_method': 'label',
        'slices': 50,
      }),
    }),
    feret_maximum_by_layer=None,
    fig_area_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Area per layer based on FWHM of pores per layer.'}, xlabel='Layer', ylabel='Area (nm^2)'>,
    ),
    fig_log_area_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Area per layer based on FWHM of pores per layer.'}, xlabel='Layer', ylabel='log(Area)'>,
    ),
    fig_log_objects_per_layer=None,
    fig_objects_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Pores per layer'}, xlabel='Layer', ylabel='n'>,
    ),
    filename='sample2',
    full_image_plots=None,
    full_mask_tensor=None,
    full_width_half_max=tuple(
      1,
      3,
    ),
    grain_crops=None,
    image=array([[-8.805, -8.741, -8.645, ..., -3.895, -3.608, -3.347],
         [-8.78 , -8.709, -8.609, ..., -4.075, -3.78 , -3.512],
         [-8.732, -8.655, -8.55 , ..., -4.268, -3.962, -3.686],
         ...,
         [-1.227, -0.876, -0.47 , ...,  2.527,  2.565,  2.592],
         [-1.128, -0.79 , -0.402, ...,  2.488,  2.522,  2.543],
         [-1.034, -0.707, -0.333, ...,  2.455,  2.484,  2.5  ]]),
    image_name='sample2',
    image_original=array([[-267.239, -267.996, -268.166, ..., -286.729, -285.753, -285.216],
         [-267.386, -267.849, -267.947, ..., -287.9  , -288.046, -287.826],
         [-267.532, -267.727, -267.922, ..., -288.192, -287.778, -287.29 ],
         ...,
         [-172.964, -172.306, -171.452, ..., -191.966, -191.844, -191.941],
         [-173.111, -172.452, -171.818, ..., -191.575, -191.795, -191.527],
         [-172.623, -171.94 , -171.305, ..., -191.087, -191.307, -191.575]]),
    image_statistics=None,
    img_path='tmp',
    layer_max_pores=None,
    layers=array([-296.851, -260.794, -224.736, -188.679, -152.621]),
    max_height=10.522,
    min_height=-13.296,
    minimum_size=20000,
    pixel_to_nm_scaling=0.625,
    pores_per_layer=list([
      1,
      1,
      1,
      1,
      1,
    ]),
    pores_per_layer_mean=None,
    pores_per_layer_std=None,
    segment_method='label',
    sliced_array=array([[[-8.805, -8.805, -8.805, -8.805, -8.805],
          [-8.741, -8.741, -8.741, -8.741, -8.741],
          [-8.645, -8.645, -8.645, -8.645, -8.645],
          ...,
          [-3.895, -3.895, -3.895, -3.895, -3.895],
          [-3.608, -3.608, -3.608, -3.608, -3.608],
          [-3.347, -3.347, -3.347, -3.347, -3.347]],
  
         [[-8.78 , -8.78 , -8.78 , -8.78 , -8.78 ],
          [-8.709, -8.709, -8.709, -8.709, -8.709],
          [-8.609, -8.609, -8.609, -8.609, -8.609],
          ...,
          [-4.075, -4.075, -4.075, -4.075, -4.075],
          [-3.78 , -3.78 , -3.78 , -3.78 , -3.78 ],
          [-3.512, -3.512, -3.512, -3.512, -3.512]],
  
         [[-8.732, -8.732, -8.732, -8.732, -8.732],
          [-8.655, -8.655, -8.655, -8.655, -8.655],
          [-8.55 , -8.55 , -8.55 , -8.55 , -8.55 ],
          ...,
          [-4.268, -4.268, -4.268, -4.268, -4.268],
          [-3.962, -3.962, -3.962, -3.962, -3.962],
          [-3.686, -3.686, -3.686, -3.686, -3.686]],
  
         ...,
  
         [[-1.227, -1.227, -1.227, -1.227, -1.227],
          [-0.876, -0.876, -0.876, -0.876, -0.876],
          [-0.47 , -0.47 , -0.47 , -0.47 , -0.47 ],
          ...,
          [ 2.527,  2.527,  2.527,  2.527,  2.527],
          [ 2.565,  2.565,  2.565,  2.565,  2.565],
          [ 2.592,  2.592,  2.592,  2.592,  2.592]],
  
         [[-1.128, -1.128, -1.128, -1.128, -1.128],
          [-0.79 , -0.79 , -0.79 , -0.79 , -0.79 ],
          [-0.402, -0.402, -0.402, -0.402, -0.402],
          ...,
          [ 2.488,  2.488,  2.488,  2.488,  2.488],
          [ 2.522,  2.522,  2.522,  2.522,  2.522],
          [ 2.543,  2.543,  2.543,  2.543,  2.543]],
  
         [[-1.034, -1.034, -1.034, -1.034, -1.034],
          [-0.707, -0.707, -0.707, -0.707, -0.707],
          [-0.333, -0.333, -0.333, -0.333, -0.333],
          ...,
          [ 2.455,  2.455,  2.455,  2.455,  2.455],
          [ 2.484,  2.484,  2.484,  2.484,  2.484],
          [ 2.5  ,  2.5  ,  2.5  ,  2.5  ,  2.5  ]]]),
    sliced_clean_region_properties=list([
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(27, 365, 28, 366)>,
      ]),
    ]),
    sliced_mask=array([[[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         ...,
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]]]),
    sliced_region_properties=list([
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(27, 365, 28, 366)>,
      ]),
    ]),
    sliced_segments=array([[[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         ...,
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]]]),
    sliced_segments_clean=array([[[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         ...,
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]]]),
    slices=5,
    statistics=area
  layer pore               
  0     0     160000.000000
  1     0     160000.000000
  2     0     160000.000000
  3     0     160000.000000
  4     0          0.390625,
    topostats_version=None,
  )
# ---
# name: test_process[sample2, with config]
  AFMSlicer(
    afmslicer_version='test',
    area_by_layer=list([
      list([
        160000.0,
      ]),
      list([
        160000.0,
      ]),
      list([
        160000.0,
      ]),
      list([
        160000.0,
      ]),
      list([
        0.391,
      ]),
    ]),
    basename=None,
    centroid_by_layer=None,
    config=dict({
      'base_dir': './',
      'cores': 2,
      'file_ext': '.spm',
      'filter': dict({
        'gaussian_mode': 'nearest',
        'gaussian_size': 4.0,
        'remove_scars': dict({
          'max_scar_width': 4,
          'min_scar_length': 16,
          'removal_iterations': 2,
          'threshold_high': 0.666,
          'threshold_low': 0.25,
        }),
        'row_alignment_quantile': 0.5,
      }),
      'loading': dict({
        'channel': 'Height',
        'extract': 'raw',
      }),
      'log_level': 'info',
      'output_dir': './output',
      'plotting': dict({
        'cmap': 'viridis',
        'format': 'png',
        'gif_duration': 100,
        'gif_loop': 0,
        'grid': True,
      }),
      'slicing': dict({
        'area': True,
        'area_thresholds': dict({
          'high': 1500,
          'low': 20,
          'medium': 500,
        }),
        'centroid': False,
        'feret_maximum': False,
        'minimum_size': 0,
        'pore_colors': list([
          'yellow',
          'green',
          'magenta',
          'blue',
        ]),
        'segment_method': 'label',
        'slices': 50,
      }),
    }),
    feret_maximum_by_layer=None,
    fig_area_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Area per layer based on FWHM of pores per layer.'}, xlabel='Layer', ylabel='Area (nm^2)'>,
    ),
    fig_log_area_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Area per layer based on FWHM of pores per layer.'}, xlabel='Layer', ylabel='log(Area)'>,
    ),
    fig_log_objects_per_layer=None,
    fig_objects_per_layer=tuple(
      <Figure size 640x480 with 1 Axes>,
      <Axes: title={'center': 'Pores per layer'}, xlabel='Layer', ylabel='n'>,
    ),
    filename='sample2',
    full_image_plots=None,
    full_mask_tensor=None,
    full_width_half_max=tuple(
      1,
      3,
    ),
    grain_crops=None,
    image=array([[-8.805, -8.741, -8.645, ..., -3.895, -3.608, -3.347],
         [-8.78 , -8.709, -8.609, ..., -4.075, -3.78 , -3.512],
         [-8.732, -8.655, -8.55 , ..., -4.268, -3.962, -3.686],
         ...,
         [-1.227, -0.876, -0.47 , ...,  2.527,  2.565,  2.592],
         [-1.128, -0.79 , -0.402, ...,  2.488,  2.522,  2.543],
         [-1.034, -0.707, -0.333, ...,  2.455,  2.484,  2.5  ]]),
    image_name='sample2',
    image_original=array([[-267.239, -267.996, -268.166, ..., -286.729, -285.753, -285.216],
         [-267.386, -267.849, -267.947, ..., -287.9  , -288.046, -287.826],
         [-267.532, -267.727, -267.922, ..., -288.192, -287.778, -287.29 ],
         ...,
         [-172.964, -172.306, -171.452, ..., -191.966, -191.844, -191.941],
         [-173.111, -172.452, -171.818, ..., -191.575, -191.795, -191.527],
         [-172.623, -171.94 , -171.305, ..., -191.087, -191.307, -191.575]]),
    image_statistics=None,
    img_path='tmp',
    layer_max_pores=None,
    layers=array([-296.851, -260.794, -224.736, -188.679, -152.621]),
    max_height=10.522,
    min_height=-13.296,
    minimum_size=20000,
    pixel_to_nm_scaling=0.625,
    pores_per_layer=list([
      1,
      1,
      1,
      1,
      1,
    ]),
    pores_per_layer_mean=None,
    pores_per_layer_std=None,
    segment_method='label',
    sliced_array=array([[[-8.805, -8.805, -8.805, -8.805, -8.805],
          [-8.741, -8.741, -8.741, -8.741, -8.741],
          [-8.645, -8.645, -8.645, -8.645, -8.645],
          ...,
          [-3.895, -3.895, -3.895, -3.895, -3.895],
          [-3.608, -3.608, -3.608, -3.608, -3.608],
          [-3.347, -3.347, -3.347, -3.347, -3.347]],
  
         [[-8.78 , -8.78 , -8.78 , -8.78 , -8.78 ],
          [-8.709, -8.709, -8.709, -8.709, -8.709],
          [-8.609, -8.609, -8.609, -8.609, -8.609],
          ...,
          [-4.075, -4.075, -4.075, -4.075, -4.075],
          [-3.78 , -3.78 , -3.78 , -3.78 , -3.78 ],
          [-3.512, -3.512, -3.512, -3.512, -3.512]],
  
         [[-8.732, -8.732, -8.732, -8.732, -8.732],
          [-8.655, -8.655, -8.655, -8.655, -8.655],
          [-8.55 , -8.55 , -8.55 , -8.55 , -8.55 ],
          ...,
          [-4.268, -4.268, -4.268, -4.268, -4.268],
          [-3.962, -3.962, -3.962, -3.962, -3.962],
          [-3.686, -3.686, -3.686, -3.686, -3.686]],
  
         ...,
  
         [[-1.227, -1.227, -1.227, -1.227, -1.227],
          [-0.876, -0.876, -0.876, -0.876, -0.876],
          [-0.47 , -0.47 , -0.47 , -0.47 , -0.47 ],
          ...,
          [ 2.527,  2.527,  2.527,  2.527,  2.527],
          [ 2.565,  2.565,  2.565,  2.565,  2.565],
          [ 2.592,  2.592,  2.592,  2.592,  2.592]],
  
         [[-1.128, -1.128, -1.128, -1.128, -1.128],
          [-0.79 , -0.79 , -0.79 , -0.79 , -0.79 ],
          [-0.402, -0.402, -0.402, -0.402, -0.402],
          ...,
          [ 2.488,  2.488,  2.488,  2.488,  2.488],
          [ 2.522,  2.522,  2.522,  2.522,  2.522],
          [ 2.543,  2.543,  2.543,  2.543,  2.543]],
  
         [[-1.034, -1.034, -1.034, -1.034, -1.034],
          [-0.707, -0.707, -0.707, -0.707, -0.707],
          [-0.333, -0.333, -0.333, -0.333, -0.333],
          ...,
          [ 2.455,  2.455,  2.455,  2.455,  2.455],
          [ 2.484,  2.484,  2.484,  2.484,  2.484],
          [ 2.5  ,  2.5  ,  2.5  ,  2.5  ,  2.5  ]]]),
    sliced_clean_region_properties=list([
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(27, 365, 28, 366)>,
      ]),
    ]),
    sliced_mask=array([[[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         ...,
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]]]),
    sliced_region_properties=list([
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(0, 0, 640, 640)>,
      ]),
      list([
        <RegionProperties: label=1, bbox=(27, 365, 28, 366)>,
      ]),
    ]),
    sliced_segments=array([[[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         ...,
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]]]),
    sliced_segments_clean=array([[[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         ...,
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]],
  
         [[1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          ...,
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.],
          [1., 1., 1., 1., 0.]]]),
    slices=5,
    statistics=area
  layer pore               
  0     0     160000.000000
  1     0     160000.000000
  2     0     160000.000000
  3     0     160000.000000
  4     0          0.390625,
    topostats_version=None,
  )
# ---
# name: test_slicer[sample1, no config]
  list([
    list([
      399998474.121,
    ]),
    list([
      297546.387,
      187683.105,
      2426147.461,
      13227844.238,
      39672.852,
      64086.914,
      4577.637,
      16784.668,
      80871.582,
      1341247.559,
      7637023.926,
      4618835.449,
      22888.184,
      6547546.387,
      1525.879,
      6809997.559,
      149536.133,
      547790.527,
      4312133.789,
      1525.879,
      26747131.348,
      28991.699,
      4577.637,
      1525.879,
      1525.879,
      1289367.676,
      3051.758,
      6103.516,
      3051.758,
      13732.91,
      3051.758,
      213623.047,
      2124023.438,
      9155.273,
      15258.789,
      910949.707,
      1852416.992,
      3166198.73,
      25939.941,
      1902770.996,
      6103.516,
      140380.859,
      53405.762,
    ]),
    list([
      172424.316,
      1577758.789,
      9231567.383,
      437927.246,
      3332519.531,
      5632019.043,
      329589.844,
      4870605.469,
      485229.492,
      16784.668,
      5039978.027,
      291442.871,
      820922.852,
      553894.043,
      19078063.965,
      825500.488,
      386047.363,
      396728.516,
      7629.395,
      12207.031,
      73242.188,
      1350402.832,
      212097.168,
      276184.082,
      900268.555,
      1681518.555,
      822448.73,
      317382.812,
      196838.379,
      317382.812,
      73242.188,
    ]),
    list([
      59509.277,
      111389.16,
      251770.02,
      1525.879,
      273132.324,
      245666.504,
      347900.391,
      308227.539,
      160217.285,
      99182.129,
      259399.414,
      419616.699,
      138854.98,
      222778.32,
      350952.148,
      105285.645,
      187683.105,
      108337.402,
      207519.531,
      274658.203,
      245666.504,
      152587.891,
      430297.852,
      100708.008,
      144958.496,
      170898.438,
      299072.266,
      196838.379,
      274658.203,
      500488.281,
      73242.188,
      213623.047,
      193786.621,
      16784.668,
      158691.406,
      279235.84,
      155639.648,
      158691.406,
      349426.27,
      177001.953,
      6103.516,
      74768.066,
      404357.91,
      183105.469,
      1382446.289,
      788879.395,
      15258.789,
      22888.184,
      398254.395,
      508117.676,
      67138.672,
      125122.07,
      367736.816,
      230407.715,
      99182.129,
      355529.785,
      164794.922,
      115966.797,
      61035.156,
      160217.285,
      158691.406,
      236511.23,
      51879.883,
    ]),
    list([
      1525.879,
    ]),
  ])
# ---
# name: test_slicer[sample1, with config]
  list([
    list([
      399998474.121,
    ]),
    list([
      297546.387,
      187683.105,
      2426147.461,
      13227844.238,
      39672.852,
      64086.914,
      4577.637,
      16784.668,
      80871.582,
      1341247.559,
      7637023.926,
      4618835.449,
      22888.184,
      6547546.387,
      1525.879,
      6809997.559,
      149536.133,
      547790.527,
      4312133.789,
      1525.879,
      26747131.348,
      28991.699,
      4577.637,
      1525.879,
      1525.879,
      1289367.676,
      3051.758,
      6103.516,
      3051.758,
      13732.91,
      3051.758,
      213623.047,
      2124023.438,
      9155.273,
      15258.789,
      910949.707,
      1852416.992,
      3166198.73,
      25939.941,
      1902770.996,
      6103.516,
      140380.859,
      53405.762,
    ]),
    list([
      172424.316,
      1577758.789,
      9231567.383,
      437927.246,
      3332519.531,
      5632019.043,
      329589.844,
      4870605.469,
      485229.492,
      16784.668,
      5039978.027,
      291442.871,
      820922.852,
      553894.043,
      19078063.965,
      825500.488,
      386047.363,
      396728.516,
      7629.395,
      12207.031,
      73242.188,
      1350402.832,
      212097.168,
      276184.082,
      900268.555,
      1681518.555,
      822448.73,
      317382.812,
      196838.379,
      317382.812,
      73242.188,
    ]),
    list([
      59509.277,
      111389.16,
      251770.02,
      1525.879,
      273132.324,
      245666.504,
      347900.391,
      308227.539,
      160217.285,
      99182.129,
      259399.414,
      419616.699,
      138854.98,
      222778.32,
      350952.148,
      105285.645,
      187683.105,
      108337.402,
      207519.531,
      274658.203,
      245666.504,
      152587.891,
      430297.852,
      100708.008,
      144958.496,
      170898.438,
      299072.266,
      196838.379,
      274658.203,
      500488.281,
      73242.188,
      213623.047,
      193786.621,
      16784.668,
      158691.406,
      279235.84,
      155639.648,
      158691.406,
      349426.27,
      177001.953,
      6103.516,
      74768.066,
      404357.91,
      183105.469,
      1382446.289,
      788879.395,
      15258.789,
      22888.184,
      398254.395,
      508117.676,
      67138.672,
      125122.07,
      367736.816,
      230407.715,
      99182.129,
      355529.785,
      164794.922,
      115966.797,
      61035.156,
      160217.285,
      158691.406,
      236511.23,
      51879.883,
    ]),
    list([
      1525.879,
    ]),
  ])
# ---
# name: test_slicer[sample2, no config]
  list([
    list([
      159999.609,
    ]),
    list([
      135931.25,
      67.578,
      0.781,
      0.781,
      0.391,
      1.953,
      1.172,
      3.516,
      2.734,
      23.047,
      0.781,
      0.391,
      0.781,
      3.516,
      0.781,
      0.781,
      0.391,
      2.734,
      0.391,
      0.391,
      2.734,
      1.562,
      1.562,
      7.031,
      0.781,
      1.172,
      0.781,
      0.391,
      0.391,
      0.391,
      1.172,
      0.391,
      0.391,
      8.203,
      1.953,
      0.391,
      0.391,
      0.781,
      0.391,
      2.734,
      6.25,
      1.562,
      0.391,
      0.391,
      0.781,
      1.562,
      3.516,
      1.562,
      0.781,
      0.781,
      25.781,
      0.391,
      0.391,
      0.391,
      2.734,
      0.391,
      0.781,
      0.391,
      0.781,
      3.906,
      0.781,
      0.391,
      0.391,
      2.344,
      0.391,
      2.734,
      0.391,
      0.391,
      1.562,
      1.562,
      1.562,
      0.781,
      0.391,
      0.391,
      1.562,
      1.562,
    ]),
    list([
      0.781,
      0.391,
      5.469,
      0.781,
      74628.516,
      3.906,
      0.781,
      0.391,
      0.391,
      0.781,
      0.391,
      0.391,
      50.0,
      0.391,
      0.781,
      0.781,
      1.953,
      10.938,
      1.562,
      0.391,
      1.172,
      0.391,
      0.391,
      0.781,
      0.391,
      1.953,
      94.922,
      1.562,
      1.562,
      0.391,
      0.781,
      11.328,
      43.75,
      1.562,
      2.344,
      0.391,
      1.562,
      0.781,
      3.516,
      0.781,
      3.125,
      0.781,
      0.391,
      1.562,
      2.734,
      1.172,
      0.391,
      1.172,
      0.391,
      3.125,
      0.391,
      4.297,
      0.391,
      7.422,
      0.781,
      0.781,
      0.391,
      0.391,
      1.953,
      1.562,
      0.391,
      1.953,
      1.172,
      0.391,
      0.391,
      0.781,
      0.781,
      0.391,
      0.391,
      1.953,
      0.391,
      0.391,
      1.172,
      0.781,
      0.391,
      1.172,
      0.391,
      0.391,
      0.391,
      0.391,
      0.781,
      1.562,
      1.172,
      1.172,
    ]),
    list([
      0.391,
      0.391,
      5.078,
      0.391,
      0.391,
      14684.375,
      0.391,
      1.562,
      0.391,
      0.391,
      0.781,
      0.391,
      7.031,
      0.391,
      2.344,
      0.391,
      0.391,
      0.391,
      0.781,
      0.781,
      0.391,
      1.953,
      7.422,
      1.562,
      0.391,
      0.781,
      0.391,
      1.562,
      0.781,
      0.391,
      181.25,
      0.391,
      0.781,
      3.516,
      0.391,
      0.391,
      0.781,
      1.953,
      3.125,
      1.953,
      0.391,
      1.172,
      0.781,
      1.953,
      0.391,
      137.891,
      0.781,
      94.141,
      1.172,
      0.391,
      0.391,
      0.781,
      0.781,
      0.781,
      0.781,
      0.781,
    ]),
    list([
      0.391,
    ]),
  ])
# ---
# name: test_slicer[sample2, with config]
  list([
    list([
      159999.609,
    ]),
    list([
      135931.25,
      67.578,
      0.781,
      0.781,
      0.391,
      1.953,
      1.172,
      3.516,
      2.734,
      23.047,
      0.781,
      0.391,
      0.781,
      3.516,
      0.781,
      0.781,
      0.391,
      2.734,
      0.391,
      0.391,
      2.734,
      1.562,
      1.562,
      7.031,
      0.781,
      1.172,
      0.781,
      0.391,
      0.391,
      0.391,
      1.172,
      0.391,
      0.391,
      8.203,
      1.953,
      0.391,
      0.391,
      0.781,
      0.391,
      2.734,
      6.25,
      1.562,
      0.391,
      0.391,
      0.781,
      1.562,
      3.516,
      1.562,
      0.781,
      0.781,
      25.781,
      0.391,
      0.391,
      0.391,
      2.734,
      0.391,
      0.781,
      0.391,
      0.781,
      3.906,
      0.781,
      0.391,
      0.391,
      2.344,
      0.391,
      2.734,
      0.391,
      0.391,
      1.562,
      1.562,
      1.562,
      0.781,
      0.391,
      0.391,
      1.562,
      1.562,
    ]),
    list([
      0.781,
      0.391,
      5.469,
      0.781,
      74628.516,
      3.906,
      0.781,
      0.391,
      0.391,
      0.781,
      0.391,
      0.391,
      50.0,
      0.391,
      0.781,
      0.781,
      1.953,
      10.938,
      1.562,
      0.391,
      1.172,
      0.391,
      0.391,
      0.781,
      0.391,
      1.953,
      94.922,
      1.562,
      1.562,
      0.391,
      0.781,
      11.328,
      43.75,
      1.562,
      2.344,
      0.391,
      1.562,
      0.781,
      3.516,
      0.781,
      3.125,
      0.781,
      0.391,
      1.562,
      2.734,
      1.172,
      0.391,
      1.172,
      0.391,
      3.125,
      0.391,
      4.297,
      0.391,
      7.422,
      0.781,
      0.781,
      0.391,
      0.391,
      1.953,
      1.562,
      0.391,
      1.953,
      1.172,
      0.391,
      0.391,
      0.781,
      0.781,
      0.391,
      0.391,
      1.953,
      0.391,
      0.391,
      1.172,
      0.781,
      0.391,
      1.172,
      0.391,
      0.391,
      0.391,
      0.391,
      0.781,
      1.562,
      1.172,
      1.172,
    ]),
    list([
      0.391,
      0.391,
      5.078,
      0.391,
      0.391,
      14684.375,
      0.391,
      1.562,
      0.391,
      0.391,
      0.781,
      0.391,
      7.031,
      0.391,
      2.344,
      0.391,
      0.391,
      0.391,
      0.781,
      0.781,
      0.391,
      1.953,
      7.422,
      1.562,
      0.391,
      0.781,
      0.391,
      1.562,
      0.781,
      0.391,
      181.25,
      0.391,
      0.781,
      3.516,
      0.391,
      0.391,
      0.781,
      1.953,
      3.125,
      1.953,
      0.391,
      1.172,
      0.781,
      1.953,
      0.391,
      137.891,
      0.781,
      94.141,
      1.172,
      0.391,
      0.391,
      0.781,
      0.781,
      0.781,
      0.781,
      0.781,
    ]),
    list([
      0.391,
    ]),
  ])
# ---
